# DTCC_self_analysis_aider

./: README.md  backend.py  db.py  fecther.py  hello.py  models.py  parser.py  pyproject.toml  tempCodeRunnerFile.py
RAG_Services/: agent.py  fecther.py  parser.py
database/: db.py  models.py
frontend/: install.ps1  package-lock.json  package.json  tailwind.config.js
frontend/src/: config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/messages/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ChatInterface.tsx  ChatSidebar.tsx  MotionWrapper.tsx
frontend/src/lib/: chatStore.ts  firebase.ts  types.ts
